--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
     <title>Vite Template</title>
   </head>
   <body>
-    <h1>HOLA</h1>
+    <button id="boton">Añadir Elementos</button>
+      <ul>
+        <li>Item 1</li>
+      </ul>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
