--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
     <title>Vite Template</title>
   </head>
   <body>
-    <button id="boton">Añadir Elementos</button>
-      <ul>
-        <li>Item 1</li>
-      </ul>
+    <div>
+      <input type="text" id="text" />
+      <ul id="list-one"></ul>
+    </div>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
