--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,11 @@
     <title>Vite Template</title>
   </head>
   <body>
-    <div>
-      <input type="text" id="text" />
-      <ul id="list-one"></ul>
-    </div>
+    <label>Introduce un número</label>
+      <input type="number" id="number"/>
+      <button id="button-generate">Imprimir tabla de multiplicar</button>
+      <ul id="multiply-list"></ul>
+
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
